<resources>
    <string name="app_name">Story Game</string>
    <string name="action_settings">Settings</string>
    <string name="create_new_story">Create new story</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="action_profile">Profile</string>
    <string name="search">Search</string>
    <string name="value">Value</string>
    <string name="write_story">Write Story</string>
    <string name="submit">Submit</string>
    <string name="wait_for_your_turn">Wait for your turn</string>
    <string name="too_few_words">You need to write at least %1$d words</string>
    <string name="too_many_words">You can write at most %1$d words</string>
    <string name="story_sent_successfully">Story sent successfully</string>
    <string name="error_EMPTY_TEXT">Text can\'t be empty</string>
    <string name="error_GAME_NOT_STARTED">Game not started yet</string>
    <string name="error_TOO_SHORT_TEXT">You need to write at least %1$d words</string>
    <string name="error_TOO_LONG_TEXT">You can write at most %1$d words</string>
    <string name="error_NOT_NEXT_WRITER">Your turn is not yet to write</string>
    <string name="error_DATABASE_ERROR">Server error. Please try again later.</string>
    <string name="wait_info">It\'s %1$s\'s turn right now</string>
    <string name="title">Title</string>
    <string name="min_words">Min words per user</string>
    <string name="max_words">Max words per user</string>
    <string name="select_language">Select language</string>
    <string name="rounds_per_user">Rounds per user</string>
    <string name="words_visible">Number of words visible</string>
    <string name="public_game">Public story</string>
    <string name="private_game">Private story</string>
    <string name="min_words_invalid">Min words must be at least 1</string>
    <string name="max_words_invalid">Max words must be at least 1</string>
    <string name="title_must_be_set">Title must be set</string>
    <string name="rounds_invalid">Rounds per user must be at least 1</string>
    <string name="words_visible_invalid">Words visible must be 0 or more. 0 shows everything.</string>
    <string name="language_must_be_selected">Language must be selected</string>
    <string name="story_created_successfully">Story created successfully</string>
    <string name="game_started">Game started</string>
    <string name="story_started">Story started</string>
    <string name="error_NOT_ALLOWED_TO_START">You are not allowed to start this game</string>
    <string name="error_ALREADY_STARTED">Story already started</string>
    <string name="error_TOO_FEW_PARTICIPANTS">There must be at least 2 participants</string>
    <string name="start">Start</string>
    <string name="participants_count">%1$d participants</string>
    <string name="joined">Joined successfully</string>
    <string name="error_ALREADY_JOINED">Already joined to this story</string>
    <string name="error_NOT_FOUND">Story not found</string>
    <string name="game_not_started">Game not started yet</string>
    <string name="invite">Invite</string>
    <string name="share_default_text">Join my story</string>
    <string name="share_title">Share via</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="invalid_username">Username must be >1 characters</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="action_logout">Logout</string>
    <string name="registered_successfully">You can now sign in</string>
    <string name="error_USERNAME_EXISTS">Username is already taken</string>
    <string name="error_INVALID_PASSWORD">Password must be at least 8 characters</string>
    <string name="msg_token_fmt">Message token %1$s</string>
    <string name="finalize_story">Finalize story</string>
    <string name="games_tab_1">Ongoing</string>
    <string name="games_tab_2">Finished</string>
    <string name="games_tab_3">Popular</string>
    <string name="max_words_smaller_than_min_words">Max words can\'t be smaller than min words</string>
    <string-array name="privacy_selections">
        <item>Private</item>
        <item>Public to read</item>
        <item>Public to read and write</item>
    </string-array>
    <string name="error_MAX_WORDS_INVALID">Max words value must be at least 1</string>
    <string name="error_ROUNDS_PER_USER_INVALID">Rounds per user must be at least 1</string>
    <string name="max_participants">Max participants</string>
    <string name="max_participants_invalid">Max participants must be at least 2. Leave blank to allow all.</string>
    <string name="error_GAME_IS_FULL">Game already has maximum amount of participants</string>
    <string name="action_delete">Delete</string>
    <string name="story_deleted">Story deleted</string>
    <string name="unable_to_connect_backend">Unable to connect to the server</string>
    <string name="error">Error</string>
    <string name="no_internet">Unable to connect to servers. Please check your internet connection.</string>
</resources>
